--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@ layout: default
       <a class="prev" href="/blog/page{{paginator.next_page}}">&larr; Older</a>
     {% endif %}
     <!--<a href="/blog/archives">Blog Archives</a>-->
-    {% if paginator.previous_page %}
+    {% if paginator.previous_page && paginator.previous_page > 1 %}
     <a class="next" href="/blog/page{{paginator.previous_page}}">Newer &rarr;</a>
+    {% endif %}
+    {% if paginator.previous_page && paginator.previous_page == 1 %}
+    <a class="next" href="/">Newer &rarr;</a>
     {% endif %}
   </div>
 </div>
