--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@ layout: default
   {% endfor %}
   <div class="pagination">
     {% if paginator.next_page %}
-      <a class="prev" href="/blog/page{{paginator.next_page}}">&larr; Older</a>
+      <a class="prev" href="/blog/page/{{paginator.next_page}}">&larr; Older</a>
     {% endif %}
     <!--<a href="/blog/archives">Blog Archives</a>-->
     {% if paginator.previous_page && paginator.previous_page > 1 %}
-    <a class="next" href="/blog/page{{paginator.previous_page}}">Newer &rarr;</a>
+    <a class="next" href="/blog/page/{{paginator.previous_page}}">Newer &rarr;</a>
     {% endif %}
+    
     {% if paginator.previous_page && paginator.previous_page == 1 %}
     <a class="next" href="/">Newer &rarr;</a>
     {% endif %}
