--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@ layout: default
     </article>
   {% endfor %}
   <div class="pagination">
-    {% if paginator.next_page %}
-      <a class="prev" href="/blog/page/{{paginator.next_page}}">&larr; Older</a>
-    {% endif %}
-    <!--<a href="/blog/archives">Blog Archives</a>-->
-    {% if paginator.previous_page && paginator.previous_page > 1 %}
-    <a class="next" href="/blog/page/{{paginator.previous_page}}">Newer &rarr;</a>
-    {% endif %}
-    
-    {% if paginator.previous_page && paginator.previous_page == 1 %}
-    <a class="next" href="/">Newer &rarr;</a>
-    {% endif %}
+      {% if paginator.previous_page %}
+      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}" class="prev">&larr; Prev</a>
+      {% endif %}
+      {% if paginator.next_page %}
+      <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="next">Next &rarr;</a>
+      {% endif %}
   </div>
 </div>
