--- a/404.html
+++ b/404.html
@@ -5,5 +5,5 @@ layout: default
   <header>
     <h1>Page not found</h1>
   </header>
-  <div>I'm sorry, the page you wer looking for could not be found.</div>
+  <div>I'm sorry, the page you were looking for could not be found.</div>
 </article>
