--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,8 @@ permalink: /categories/index.html
 title: Category Index
 tags: [Categories]
 description: "An archive of posts sorted by categories."
-
+sitemap:
+  changefreq: 'weekly'
 ---
 
 <ul class="tag-box inline">
