--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: home
 title: Temple Coding
 description: "The personal blog of Thiago Temple."
 tags: [Thiago Temple, Thiago, Temple, blog, site, development, coding]
+sitemap:
+  changefreq: 'weekly'
 ---
 {% if site.paginate %}
 	{% for post in paginator.posts %}	
