--- a/tags.html
+++ b/tags.html
@@ -3,6 +3,8 @@ layout: pageminimal
 title: Tag Index
 permalink: /tags/index.html
 description: "An archive of posts sorted by tag."
+sitemap:
+  changefreq: 'weekly'
 ---
 
 <ul class="tag-box inline">
