--- a/src/app.html
+++ b/src/app.html
@@ -11,11 +11,11 @@
 			const theme = localStorage.getItem("color-scheme");
 
 			theme
-				? document.documentElement.setAttribute("color-scheme", theme)
+				? document.documentElement.classList.add(theme)
 				: localStorage.setItem("color-scheme", "dark");
 		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-zinc-100">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
