--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 				: localStorage.setItem("color-scheme", "dark");
 		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-zinc-100">
+	<body data-sveltekit-preload-data="hover" class="bg-slate-100 dark:bg-slate-900">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
