--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,7 @@
 				? document.documentElement.classList.add(theme)
 				: localStorage.setItem("color-scheme", "dark");
 		</script>
+		<script src="https://cdn.usefathom.com/script.js" data-site="PBBTUKFS" defer></script>
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-slate-100 dark:bg-slate-900">
 		<div>%sveltekit.body%</div>
